# scout-v2

./: .dockerignore  .env  .eslintrc.js  .gitignore  README.md  ci.sh  docker-compose.yml  pyproject.toml
api/: index.ts  package.json  types.ts
app/: .env  .eslintrc.js  package-lock.json  package.json
app/public/: index.html  manifest.json
app/src/: App.tsx  DaySelection.tsx  DurationSelection.tsx  FreeRoomDisplay.tsx  RegionSelection.tsx  api.ts  interfaces.ts  theme.tsx  util.ts
app/src/components/: DaySelection.tsx  FreeRoomDisplay.tsx  RegionSelection.tsx  TimeSelection.tsx  WeekSelection.tsx
deploy/: bundle.sh  deploy-app.sh  deploy-lambdas.sh  deploy.sh  tf.sh
docker/: poetry.Dockerfile
infra/: .terraform.lock.hcl  main.tf  output.tf  provider.tf  variables.tf
infra/api/: api.tf  variables.tf
infra/app/: app.tf  dns.tf  variables.tf
infra/scraper/: scraper.tf  variables.tf
src/: Writer.py  main.py  scraper.py  setup.py
src/data/: low.json  mid.json  rooms.json  top.json
