[tool.poetry]
name = "scout"
version = "0.1.0"
description = "Room finder for UNSW"
authors = ["David Adams"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
python-dateutil = "^2.8.1"
boto3 = "^1.17.39"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.1"
mypy = "^0.790"
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
